syntax = "proto3";

package pb;

message VPNStatusRequest {}
message VPNInitRequest {
  string Hostname = 1;
  string Port = 2;
}

service VPNService {
  rpc Status (VPNStatusRequest) returns (VPNStatusResponse) {}
  rpc Init (VPNInitRequest) returns (VPNInitResponse) {}
}

message VPNStatusResponse {
  string Name = 1;
  string SerialNumber = 2;
  string Hostname = 3;
  string Port = 4;
  string Cert = 5;
  string CACert = 6;
  string Net = 7;
  string Mask = 8;
  string CreatedAt = 9;
}
message VPNInitResponse {}
